[package]
name = "zwp-input-method-service"
version = "0.5.1"
authors = ["pentamassiv <pentamassiv@posteo.de>"]
license = "MIT"
description = "Safe wrapper to easily use the zwp-input-method protocol"
repository = "https://github.com/grelltrier/input_method_service"
documentation = "https://docs.rs/zwp-input-method-service"
keywords = ["wayland", "virtual_keyboard", "wayland-scanner", "unstable", "wayland-protocols"]
categories = ["gui", "os::linux-apis"]
edition = "2021"

[dependencies]
wayland-client = {version="0.29", features = ["use_system_lib"]}
wayland-protocols = {version="0.29", features = ["client", "unstable_protocols"]}
# wayland-protocols-misc = "0.1.0-beta.4" This crate should be used once the input-method protocol is removed from the wayland-protocols crate
input-event-codes = "5.16.8"
log = { version = "0.4", optional = true }

[features]
debug = ["log"]